--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+*{
+    font-family: 'Roboto', sans-serif;
+    
+}
+html{
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll;
+}
 #btnGet{
   margin-top: 40px;
   margin-bottom: 10px;
@@ -10,7 +19,7 @@
 }
 #btnGet:hover{
     transform: scale(1.15);
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+    box-shadow: 2px 2px 10px rgba(163, 163, 163, 0.6);
     border: 1px solid rgb(231, 126, 5);
     background-color: rgb(241, 123, 12);
     color: rgb(246, 248, 247);
@@ -48,7 +57,7 @@ h2{
 }
 .player:hover{
     transform: scale(1.15);
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
-    background-color: rgb(241, 123, 12);
+    box-shadow: 2px 2px 10px rgba(162, 162, 162, 0.6);
+    background-color: rgba(255, 138, 29, 0.875);
 
 }
